# Gameboy-Emulator-C

./: README.md
gameboy-c/include/: bus.h  common.h  dbg.h  dma.h  interrupts.h  lcd.h  ppu.h  ui.h
gameboy-c/lib/: bus.c  cart.c  cpu.c  cpu_util.c  dbg.c  dma.c  emu.c  interrupts.c  io.c  lcd.c  ppu.c  ppu_sm.c  ram.c  stack.c  ui.c
gameboy-c/tests/: CMakeLists.txt
roms/: loz.gb.battery
